[gd_scene load_steps=13 format=3 uid="uid://dl83pje8umoco"]

[ext_resource type="Texture2D" uid="uid://bv13n3r2dd8fh" path="res://images/gui/optionback3.png" id="1_2gya7"]
[ext_resource type="Script" path="res://scenes/gui/text_input.gd" id="1_empoi"]
[ext_resource type="Script" path="res://scenes/global_animated_texture_rect.gd" id="2_xyc4x"]
[ext_resource type="Texture2D" uid="uid://ciixfktwjvisn" path="res://images/gui/optionback2.png" id="3_inwr5"]
[ext_resource type="Texture2D" uid="uid://cpnbxyvvea5em" path="res://images/gui/optionback1.png" id="4_ermnc"]
[ext_resource type="Texture2D" uid="uid://d1qfomefcd5tm" path="res://images/gui/option4.png" id="5_qurm8"]
[ext_resource type="Texture2D" uid="uid://drkjv2xdibrtj" path="res://images/gui/option2.png" id="6_7vr0l"]
[ext_resource type="Texture2D" uid="uid://i1a6ws5e3xje" path="res://images/gui/option3.png" id="7_rkr1i"]
[ext_resource type="Texture2D" uid="uid://qjpxl5mgqnhv" path="res://images/gui/option1.png" id="8_ho13w"]
[ext_resource type="FontFile" uid="uid://3quqdj1xjtht" path="res://fonts/RecursiveSansCslSt-Regular.ttf" id="9_b1s17"]
[ext_resource type="PackedScene" uid="uid://cv0fei03qr08i" path="res://scenes/gui/option.tscn" id="10_phacf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xqikl"]

[node name="TextInput" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 630.0
offset_bottom = 141.0
script = ExtResource("1_empoi")

[node name="Outline BG" type="TextureRect" parent="."]
modulate = Color(0.188235, 0.188235, 0.188235, 1)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_2gya7")
script = ExtResource("2_xyc4x")
frames = Array[Texture2D]([ExtResource("1_2gya7"), ExtResource("3_inwr5"), ExtResource("4_ermnc")])

[node name="Outline" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_qurm8")
script = ExtResource("2_xyc4x")
frames = Array[Texture2D]([ExtResource("5_qurm8"), ExtResource("6_7vr0l"), ExtResource("7_rkr1i"), ExtResource("8_ho13w")])

[node name="Input" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 49.0
offset_top = 24.0
offset_right = 583.0
offset_bottom = 79.0
theme_override_fonts/font = ExtResource("9_b1s17")
theme_override_font_sizes/font_size = 34
theme_override_styles/focus = SubResource("StyleBoxEmpty_xqikl")
alignment = 1
max_length = 24
context_menu_enabled = false
middle_mouse_paste_enabled = false
flat = true
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 90.0
offset_right = 1719.0
offset_bottom = 230.0
scale = Vector2(0.333, 0.333)

[node name="CancelButton" parent="HBoxContainer" instance=ExtResource("10_phacf")]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"
disabled = true

[node name="SubmitButton" parent="HBoxContainer" instance=ExtResource("10_phacf")]
unique_name_in_owner = true
layout_mode = 2
text = "Submit"
